--- a/compare.html
+++ b/compare.html
@@ -39,7 +39,7 @@
                 </li>
 
                 <li class="nav__item">
-                    <a href="login-register.html" class="nav__link">Login</a>
+                    <a href="contact.html" class="nav__link">Contact</a>
                 </li>
             </ul>
             <div class="header__search">
