--- a/lilac.html
+++ b/lilac.html
@@ -63,7 +63,7 @@
                 </li>
 
                 <li class="nav__item">
-                    <a href="login-register.html" class="nav__link">Login</a>
+                    <a href="contact.html" class="nav__link">Contact</a>
                 </li>
             </ul>
             <div class="header__search">
@@ -190,7 +190,7 @@
                                     <i class="fi fi-sr-eye"></i>
                                 </a>
 
-                                <a href="#" class="action__btn" aria-label="Add To Wishlist">
+                                <a href="wishlist.html" class="action__btn" aria-label="Add To Wishlist">
                                     <i class="fi fi-sr-heart"></i>
                                 </a>
 
@@ -218,7 +218,7 @@
                                 <span class="old__price">$84.32</span>
                             </div>
 
-                            <a href="#" class="action__btn cart__btn" aria-label="Add To Cart">
+                            <a href="cart.html" class="action__btn cart__btn" aria-label="Add To Cart">
                                 <i class="fi fi-sr-shopping-bag-add"></i>
                             </a>
                         </div>
